package agro.backend.model;

import com.fasterxml.jackson.annotation.JsonIgnore;
import jakarta.persistence.*;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import org.springframework.security.core.GrantedAuthority;
import org.springframework.security.core.authority.SimpleGrantedAuthority;
import org.springframework.security.core.userdetails.UserDetails;

import java.util.Collection;
import java.util.List;

@Entity
@Table(name = "users")
@Getter
@Setter
@NoArgsConstructor
public class User implements UserDetails {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(unique = true, nullable = false)
    private String username;

    @Column(nullable = false)
    private String password;

    private String email;

    // Câmpul farmName a fost eliminat, deoarece detaliile fermei vor veni din entitatea Farm

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private UserRole role;

    private Double hourlyRate;

    private Double monthlySalary;

    // Legătura către entitatea Farm
    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "farm_id") // farm_id poate fi NULL pentru SUPER_ADMIN
    @JsonIgnore // Evităm bucle infinite în JSON
    private Farm farm;

    // Implementarea metodelor din interfața UserDetails

    @Override
    public String getPassword() {
        return password;
    }

    @Override
    public String getUsername() {
        return username;
    }

    @Override
    public Collection<? extends GrantedAuthority> getAuthorities() {
        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
    }

    @Override
    public boolean isAccountNonExpired() {
        return true;
    }

    @Override
    public boolean isAccountNonLocked() {
        return true;
    }

    @Override
    public boolean isCredentialsNonExpired() {
        return true;
    }

    @Override
    public boolean isEnabled() {
        return true;
    }
}
