classDiagram
    class Farm {
        +Long id
        +String name
        +String address
        +String contactEmail
        +String visionAndGoals
    }

    class User {
        +Long id
        +String username
        +String password
        +String email
        +UserRole role
        +Double hourlyRate
        +Double monthlySalary
    }

    class Parcel {
        +Long id
        +String name
        +String cropType
        +Double areaHectares
        +String coordinatesJson
    }

    class Activity {
        +Long id
        +String title
        +ActivityType type
        +ActivityStatus status
        +LocalDateTime startDate
        +LocalDateTime endDate
        +String comments
        +Double harvestedYieldKg
        +Boolean inventoryDeducted
    }

    class ActivityConsumption {
        +Long id
        +Double quantityUsed
        +Double unitPriceAtConsumption
    }

    class InventoryItem {
        +Long id
        +String name
        +ItemCategory category
        +String unitOfMeasure
        +Double quantityAvailable
        +Double minimumStockThreshold
        +Double unitPrice
    }

    class InventoryRequest {
        +Long id
        +String itemName
        +Double quantityRequested
        +RequestPriority priority
        +RequestStatus status
        +LocalDateTime dateCreated
    }

    class Machinery {
        +Long id
        +String name
        +String model
        +MachineryType type
        +MachineryStatus status
        +Integer totalHours
        +Integer maintenanceIntervalHours
    }

    class MaintenanceLog {
        +Long id
        +LocalDate date
        +String description
        +Double cost
        +Integer hoursAtMaintenance
    }

    class CropSeason {
        +Long id
        +Integer harvestYear
        +String cropType
        +Double totalYieldKg
        +Double salePricePerKg
        +Double revenueOverride
    }

    class ParcelSubsidy {
        +Long id
        +Integer year
        +String subsidyType
        +Double amountPerHectare
        +Double totalAmount
        +SubsidyStatus status
    }

    class ParcelNdviHistory {
        +Long id
        +Long parcelId
        +String periodKey
        +Double ndviValue
        +Boolean isMockData
    }

    class FarmNote {
        +Long id
        +String title
        +String content
        +LocalDateTime dateCreated
    }

    class Notification {
        +Long id
        +String message
        +String type
        +Boolean isRead
        +LocalDateTime dateCreated
    }

    class AuditLog {
        +Long id
        +Long actorId
        +String actorUsername
        +String action
        +String targetType
        +Long targetId
        +String targetName
        +LocalDateTime createdAt
    }

    Farm "1" --> "0..*" User
    Farm "1" --> "0..*" Parcel
    Farm "1" --> "0..*" InventoryItem
    Farm "1" --> "0..*" InventoryRequest
    Farm "1" --> "0..*" Machinery
    Farm "1" --> "0..*" FarmNote

    Parcel "1" --> "0..*" Activity
    Parcel "1" --> "0..*" CropSeason
    Parcel "1" --> "0..*" ParcelSubsidy
    Parcel "1" ..> "0..*" ParcelNdviHistory : parcelId

    Activity "0..*" --> "0..*" User : assignedWorkers
    Activity "0..*" --> "0..*" Machinery : machineries
    Activity "1" --> "0..*" ActivityConsumption
    ActivityConsumption "*" --> "1" InventoryItem

    InventoryRequest "*" --> "1" User : requester
    Machinery "1" --> "0..*" MaintenanceLog
    User "1" --> "0..*" Notification
    AuditLog ..> User : actorId
